<resources>
    <string name="app_name">Consumos Electricos</string>
    <string name="app_surname">usuario</string>
     <string name="btnCosejos">Consejos de uso Eficiente</string>
     <string name="menu_cuenta">Mi cuenta</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
    <string-array name="gender_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string-array name="province_array">
        <item>San Juan</item>
        <item>Buenos Aires</item>
        <item>Córdoba</item>
        <item>Mendoza</item>
    </string-array>
    <string-array name="city_array">
        <item>Caucete</item>
        <item>Rawson</item>
        <item>Chimbas</item>
        <item>Santa Lucía</item>
    </string-array>
    <string name="nav_header_title">Nombre de usuario</string>
    <string name="nav_header_subtitle">tito</string>
    <string name="descripcion_categoria_lampara">Iluminación</string>
    <string name="descripcion_categoria_refrigerador">Refrigeración</string>
    <string name="descripcion_categoria_lavadora">Línea Blanca</string>
    <string name="descripcion_categoria_microondas">Cocina</string>
    <string name="descripcion_categoria_aire_acondicionado">Climatización</string>
    <string name="descripcion_categoria_pc">Electrónica, Audio y Video</string>
    <string name="descripcion_categoria_secadora">Cuidado Personal</string>
    <string name="descripcion_categoria_calefon">Agua</string>
    <string name="icono_sustentable">Icono sustentable</string>
    <string name="lamp_bajo_consumo">Usá lámparas LED y mantenelas limpias (cuando están sucias o en mal estado, pierden hasta un 50% de luminosidad). \n Utilizá sensores de movimiento y/o temporizadores para espacios comunes.</string>
    <string name="heladera">Abrí la heladera la menor cantidad de tiempo posible y, cuando no la uses, asegurate de dejarla bien cerrada. Ubicala por lo menos a 15 centímetros de fuentes de calor, paredes o muebles.</string>
    <string name="lavarropas">Lavá la mayor cantidad de ropa con el programa económico. Si podés, usá siempre agua fría ya que la caliente consume un 80% más de energía.</string>
    <string name="plancha">Juntá la mayor cantidad de ropa; tené presente que la plancha consume menos electricidad cuanto más tiempo seguido la usás.</string>
    <string name="aire_ac">Poné el aire acondicionado a 24° C en verano y a 20° C en invierno. Recordá que la temperatura programada se mantiene por más tiempo con las puertas y ventanas cerradas. Al menos cada seis meses, limpiá los filtros del equipo.</string>
    <string name="computadora">Apagá la computadora cuando termines de usarla. El consumo en modo Espera equivale hasta un 70% del consumo en modo Encendido.</string>
    <string name="user">user</string>
    <string name="consejo_titulo">Consejos de uso eficiente</string>
    <string name="aire_acondicionado">aire_acondicionado</string>
    <string name="computadora_pc">Computadora</string>
    <string name="alarmas_titulo">Mis alarmas</string>
    <string name="alarmas_nombre">Nombre de la alarma</string>
    <string name="alarmas_nombre_placeholder">Nueva Alarma</string>
    <string name="alarmas_frecuencia">Frecuencia</string>
    <string name="alarmas_diaria">Diaria</string>
    <string name="alarmas_semanal">Semanal</string>
    <string name="alarmas_mensual">Mensual</string>
    <string name="alarmas_limite">Limite</string>
    <string name="alarmas_placeholder">Ingrese limite de consumo</string>
    <string name="alarmas_unidad">Kw</string>
    <string name="alarmas_inicio">Inicio</string>
    <string name="alarmas_ph_fecha">DD MM AA</string>
    <string name="alarmas_ph_hora">HH MM</string>
    <string name="alarmas_btn_salir">SALIR</string>
    <string name="alarmas_btn_guardar">GUARDAR</string>
    <string name="alarmas_btn_eliminar">Eliminar</string>
    <string name="iluminacion_titulo">Iluminación</string>
    <string name="iluminacion_nombre">Nombre del sistema</string>
    <string name="iluminacion_nombre_placeholder">Nombre Sistema</string>
    <string name="iluminacion_encendido">Encendido</string>
    <string name="iluminacion_intensidad">Intensidad</string>
    <string name="iluminacion_descripcion">Descripción</string>
    <string name="iluminacion_descripcion_placeholder">Ingrese descripción</string>
    <string name="titulo_bienvenida_main">Bienvenidos a AnalizArApp</string>
    <string name="texto_btn_ingresar">INGRESAR</string>
    <string name="texto_btn_iniciar_tour">INICIAR TOUR</string>
    <string name="descripcion_btn_ingresar">Presionar para iniciar sesión en la aplicación</string>
    <string name="descripcion_btn_iniciar_tour">Presionar para iniciar el recorrido de características de la aplicación</string>
    <string name="descripcion_logotipo">Logotipo de la aplicación AnalizAr App</string>
    <string name="seguir_btn_text">SEGUIR</string>
    <string name="seguir_btn_content_description">Continuar a la siguiente pantalla de características de la aplicación</string>
    <string name="textview_content">Con AnalizArApp\n podrás controlar tus consumos \n de una manera innovadora.</string>
    <string name="textview_description">Información sobre el control de consumos en AnalizArApp.</string>
    <string name="textview2_text">¡Te damos la bienvenida!</string>
    <string name="textview2_description">Conocé nuestra aplicación</string>
    <string name="image_description">Una mujer señala los gráficos de consumo de energía eléctrica domiciliario</string>
    <string name="app_name_onboarding">Analizador de Consumos Eléctricos</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_volver_inicio">Inicio</string>
    <string name="titulo_activity_contacto">CONTACTO</string>
    <string name="titleOnboarding3">Acompañamos a Cuidar el Medioambiente</string>
    <string name="subtitleTextOnboarding3">Te brindamos los mejores consejos \npara cuidar tu bolsillo, ahorrar energía \ny cuidar el medioambiente.</string>
    <string name="link_medioambiente">¿Queres aprender como cuidar el medioambiente \ncon nuestra App?</string>
    <string name="click_medioambiente">CLICK AQUI</string>
    <string name="back">ATRAS</string>
    <string name="continueButton">SEGUIR</string>
    <string name="imgOnb3ContentDescription">Arte conceptual de una lámpara, de la cual salen dos cables: uno es una ficha eléctrica y otro es una planta</string>
    <string name="imgOnb2ContentDescription">Dibujo de una mano presionando con el dedo en la pantalla de un teléfono celular</string>
    <string name="titleOnboarding2">Controlar tu Consumo es Fundamental</string>
    <string name="subtitleTextOnboarding2">Te ayudamos a manejar tu consumo \nmediante gráficos, alertas, consejos \ny mucho más.</string>
    <string name="skip">SALTEAR</string>
    <string name="titulo_publicitario_contacto">¡Soluciones digitales!</string>
    <string name="texto_publicitario_contacto">Asistencia pulse 👇</string>
    <string name="btn_contactanos">Proyeccion</string>
    <string name="btn_soporte">SOPORTE</string>
    <string name="link">By <u><font color="#0000FF">Grupo 10 - Seminario</font></u></string>
    <string name="email">Email</string>
    <string name="datos_de_cuenta">Datos de cuenta</string>
    <string name="configuracion">Configuracion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="mi_plan">Mi plan</string>
    <string name="mi_medidor">Mi medidor</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="titulo_soporte">SOPORTE</string>
    <string name="text_nombre_apellido">Nombre y Apellido</string>
    <string name="campo_nombre_apellido">Ingrese su Nombre y Apellido</string>
    <string name="text_correo_electronico">Correo Electronico</string>
    <string name="campo_correo_electronico">Ingrese su Correo Electrónico</string>
    <string name="text_mensaje">Mensaje</string>
    <string name="campo_mensaje">Detalle su consulta para el área SOPORTE de AnalizArApp</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="titulo_video">INSTITUCIONAL</string>
    <string name="texto_valores1">Ecológico</string>
    <string name="texto_valores2">Sustentable</string>
    <string name="texto_valores3">Inteligente</string>
    <string name="titulo_mi_cuenta">Titulo Mi cuenta</string>
    <string name="btn_volver">VOLVER</string>
    <string name="btn_volver_a_contacto">Botón para volver a la sección de contacto</string>
    <string name="btn_enviar_formulario">Botón para enviar el formulario</string>
    <string name="campo_mensaje_accesibilidad">Campo del formulario para ingresar su mensaje al área de soporte</string>
    <string name="campo_correo_electronico_accesibilidad">Campo del formulario para ingresar su correo electrónico</string>
    <string name="campo_nombre_y_apellido_accesibilidad">Campo del formulario para ingresar su nombre y apellido</string>
    <string name="channel_name">analizar</string>
    <string name="channel_description">canal de analizar</string>
    <string name="Monitoreo_y_Gestion">Nuestra aplicación Android está diseñada para ayudarte a monitorizar y gestionar tu consumo eléctrico de manera eficiente. Acá te contamos cómo puede beneficiarte y cómo podés contribuir al cuidado del medioambiente.</string>
    <string name="RegistroDetallado">A través de un registro detallado de tu consumo eléctrico podes configurar alertas y notificaciones para mantenerte informado sobre tus consumos . Así podrás tener una visión clara de cuanta electricidad utilizas. De esta manera podrás aprender sobre tus hábitos de consumo y como pequeñas acciones pueden generar grandes ahorros, no solo económicos sino enérgicos.</string>
    <string name="beneficios">Beneficios Medioambientales</string>
    <string name="subtitulo_medioambiente">¿Sabías también que el uso de nuestra aplicación influye directamente en el cuidado del medioambiente?</string>
    <string name="cuidado_consumo1">Un menor consumo energético reduce la quema de combustibles fósiles, disminuyendo las emisiones de dióxido de carbono y gases de efecto invernadero combatiendo así el cambio climático.</string>
    <string name="cuidado_consumo2">Generar menor cantidad de energía eléctrica significa también menos contaminación en el aire, mejorando así la salud pública y reduciendo las enfermedades respiratorias.</string>
    <string name="cuidado_consumo3">Reducir nuestro consumo energética conserva recursos naturales como el agua y los combustibles fósiles, protegiendo nuestros ecosistemas y biodiversidad.</string>
    <string name="heladeras">Heladeras</string>
    <string name="lavarropa">Lavarropa</string>
    <string name="lamparas">Lamparas</string>
    <string name="tv_y_sistemas_de_audio_video">TV y Sistemas de audio / video</string>
    <string name="configura_tus_notificaciones">Configura tus notificaciones</string>
    <string name="consejos_diarios">Todos los consejos activados</string>
    <string name="motores_y_bombas_electricas">Motores y Bombas Electricas</string>
    <string name="planchas">Planchas</string>
    <string name="computadoras">Computadora</string>
    <string name="aire_acondicionados">Aire Acondicionado</string>
    <string name="ping_text">Establecer segundos hasta el ping</string>
    <string name="seconds_default">2</string>
    <string name="reminder_label">Texto recordatorio</string>
    <string name="reminder_text">No lo olvides!</string>
    <string name="crear_notificacion">Crear Notificación</string>
    <string name="televisor">TV</string>
    <string name="tv">En televisores y reproductores de DVD y audio, evitá el temporizador, el encendido instantáneo y la posición de espera o stand by.</string>
</resources>