<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <!-- Include de la Toolbar -->
    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- ScrollView para permitir desplazamiento -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Título -->
            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/consejo_titulo"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <!-- Imagen del Título -->
            <ImageView
                android:id="@+id/image_sustentable"
                android:layout_width="72dp"
                android:layout_height="62dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icono_sustentable"
                android:src="@drawable/energia_sustentable_2"
                android:layout_gravity="center_horizontal" />

            <!-- Layout 1: Lámpara LED -->
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CBEBF4"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/image_lampara_bajo_consumo"
                    android:layout_width="79dp"
                    android:layout_height="86dp"
                    android:src="@drawable/lampara_bajo_consumo"
                    android:contentDescription="@string/lamp_bajo_consumo" />

                <TextView
                    android:id="@+id/text_lampara_bajo_consumo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lamp_bajo_consumo"
                    android:textAlignment="center"
                    android:textColor="#474646"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:fontFamily="@font/arimo_medium" />
            </LinearLayout>

            <!-- Layout 2: Heladera -->
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CBEBF4"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/image_heladera"
                    android:layout_width="81dp"
                    android:layout_height="88dp"
                    android:src="@drawable/heladera"
                    android:contentDescription="@string/heladera" />

                <TextView
                    android:id="@+id/text_heladera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/heladera"
                    android:textAlignment="center"
                    android:textColor="#474646"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:fontFamily="@font/arimo_medium" />
            </LinearLayout>

            <!-- Layout 3: Lavarropas -->
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CBEBF4"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/image_lavarropas"
                    android:layout_width="83dp"
                    android:layout_height="87dp"
                    android:src="@drawable/lavarropas"
                    android:contentDescription="@string/lavarropas" />

                <TextView
                    android:id="@+id/text_lavarropas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lavarropas"
                    android:textAlignment="center"
                    android:textColor="#050505"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:fontFamily="@font/arimo_medium" />
            </LinearLayout>

            <!-- Layout 4: Plancha -->
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CBEBF4"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/image_plancha"
                    android:layout_width="83dp"
                    android:layout_height="83dp"
                    android:src="@drawable/plancha"
                    android:contentDescription="@string/plancha" />

                <TextView
                    android:id="@+id/text_plancha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plancha"
                    android:textAlignment="center"
                    android:textColor="#474646"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:fontFamily="@font/arimo_medium" />
            </LinearLayout>

            <!-- Layout 5: Aire Acondicionado -->
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CBEBF4"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/image_ac"
                    android:layout_width="75dp"
                    android:layout_height="79dp"
                    android:src="@drawable/aire_acondicionado"
                    android:contentDescription="@string/aire_acondicionado" />

                <TextView
                    android:id="@+id/text_ac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/aire_ac"
                    android:textAlignment="center"
                    android:textColor="#474646"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:fontFamily="@font/arimo_medium" />
            </LinearLayout>

            <!-- Layout 6: Televisores -->
            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CBEBF4"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/image_tv"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/televisor"
                    android:contentDescription="@string/televisor" />

                <TextView
                    android:id="@+id/text_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv"
                    android:textAlignment="center"
                    android:textColor="#474646"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:fontFamily="@font/arimo_medium" />
            </LinearLayout>

            <!-- Layout 7: Computadoras / pc -->
            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CBEBF4"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/image_computadora"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/computadora"
                    android:contentDescription="@string/computadora_pc" />

                <TextView
                    android:id="@+id/text_computadora"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/computadora"
                    android:textAlignment="center"
                    android:textColor="#474646"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:fontFamily="@font/arimo_medium" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
